--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,12 +1,364 @@
-$blue: blue;
-$red: red;
+@import '_reset.scss';
+@import '_bootstrap.scss';
 
-*{
-  color: #324;
+/*****************
+  2 - Geral
+******************/
+
+$colorPrinc01: #ffeb3b;
+$colorPrinc02: #7cb317;
+
+$colorNeut01:  #fff;
+$colorNeut02: #000;
+
+$colorNeut03: #262626;
+$colorNeut04: #808080;
+
+@font-face {
+  font-family: 'titillium_bdbold';
+  src: url('fonts/titillium-bold-webfont.woff2') format('woff2'),
+       url('fonts/titillium-bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
 }
 
+@font-face {
+  font-family: 'titillium_bdbold_italic';
+  src: url('fonts/titillium-bolditalic-webfont.woff2') format('woff2'),
+       url('fonts/titillium-bolditalic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'titilliumlight';
+  src: url('fonts/titillium-light-webfont.woff2') format('woff2'),
+       url('fonts/titillium-light-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'titilliumlight_italic';
+  src: url('fonts/titillium-lightitalic-webfont.woff2') format('woff2'),
+       url('fonts/titillium-lightitalic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'titilliumregular';
+  src: url('fonts/titillium-regular-webfont.woff2') format('woff2'),
+       url('fonts/titillium-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'titilliumitalic';
+  src: url('fonts/titillium-regularitalic-webfont.woff2') format('woff2'),
+       url('fonts/titillium-regularitalic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'titilliumbold';
+  src: url('fonts/titillium-semibold-webfont.woff2') format('woff2'),
+       url('fonts/titillium-semibold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'titilliumbold_italic';
+  src: url('fonts/titillium-semibolditalic-webfont.woff2') format('woff2'),
+       url('fonts/titillium-semibolditalic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'titilliumthin';
+  src: url('fonts/titillium-thin-webfont.woff2') format('woff2'),
+       url('fonts/titillium-thin-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'titilliumthin_italic';
+  src: url('fonts/titillium-thinitalic-webfont.woff2') format('woff2'),
+       url('fonts/titillium-thinitalic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+
+/*****************
+  3 - Global
+******************/
 body{
-  background: rgb(185, 55, 131);
-  width: 100%;
-  height: 100%;;
+  font-family: 'titilliumregular';
+  font-size: 16px;
+  @media(min-width: 992px){
+    margin: 50px 50px 0px 50px;
+  }
+}
+
+a{
+  transition: all 300ms ease;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 0px solid transparent;
+  -webkit-text-fill-color: #fff;
+  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+}
+/*****************
+  4 - Header Menu
+******************/
+
+.menu-principal{
+  font-family: 'titilliumbold';
+  background: $colorNeut03;
+  padding: 22px 0px;
+  
+  @media (min-width: 992px){
+    padding: 37px;
+  }
+
+  a{
+    color: #fff;
+  }
+
+  .logo{
+    a:hover{
+      opacity: 0.6;
+    }
+  }
+
+  .mob-i-func{
+    img{
+      width: 32px;
+    }
+  }
+
+  .menu-ul{
+    display: none; //display none
+    text-align: center;
+    width: 100%;
+
+    li{
+      margin: 14px;
+      opacity: 0; // opacity 0
+      position: relative;
+      left: -30px;
+
+      &:last-child{
+        margin-bottom: 0px;
+      }
+
+      .active{
+        color: $colorPrinc01;
+      }
+
+      a{
+        font-size: 18px;
+      }
+    }
+
+    li.sub-menu{
+      position: relative;
+      ul{
+        display: none;
+        margin-top: 12px;
+      }
+      li{
+        left: 0px;
+        margin: 0px auto;
+        background: $colorNeut04;
+        
+
+        a{
+          padding: 14px;
+          display: inline-block;
+          color: $colorPrinc01;
+          width: 100%;
+          border-bottom: 1px solid rgba(0,0,0,0.1);
+        }
+
+        &:last-child{
+          a{
+              border-bottom: 0px solid rgba(0,0,0,0);
+          }
+        }
+      }
+    }
+
+    .li-search{
+      position: relative;
+
+      input[type=submit]{
+        position: absolute;
+        left: 0;;
+        visibility: hidden;
+      }
+
+      input[type=text]{
+        background: transparent;
+        border: 0px;
+        outline: none;
+        color: #fff;
+        font-size: 18px;
+        width: 0px;
+      }
+      input:-webkit-autofill,
+      input:-webkit-autofill:hover, 
+      input:-webkit-autofill:focus{
+        border: 0px solid transparent;
+        -webkit-text-fill-color: #fff;
+        -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+      }
+      img{
+        width: 16px;
+        cursor: pointer;
+      }
+    }
+
+    @media(min-width: 992px){
+      width: auto;
+
+      li.sub-menu{
+        ul{
+          position: absolute;
+          left: 0px;
+          top: 64px;
+        }
+      }
+
+      li{
+        opacity: 1;
+        margin-top:0px;
+        margin-bottom: 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+        position: relative;
+        left: 0px;
+
+        a:hover{
+          color: $colorPrinc01;
+        }
+
+        .active{
+          color: #fff;
+          position: relative;
+
+          &::before{
+            content: '';
+            display: inline-block;
+            position: absolute;
+            top: -8px;
+            width: 100%;
+            height: 3px;
+            background: $colorPrinc01;
+            animation: showBefore 0.3s ease-out;
+
+            @keyframes showBefore {
+              from {
+                width: 0px;
+                opacity: 0;
+              }
+              to {
+                width: 50px;
+              }
+            }
+          }
+        }
+
+        a{
+          display: inline-block;
+           padding: 28px 14px;
+        }
+
+        &:hover{
+          ul{
+            display: block !important;
+            opacity: 1;;
+            width: 220px;
+            // margin-left: -30px;
+            animation: showLi 0.3s ease-out;
+            transition: all 300ms ease;
+
+            @keyframes showLi {
+              from {
+                top: 50px;
+                opacity: 0;
+              }
+              to {
+                top: 64px;
+                opacity: 1;
+              }
+            }
+            
+
+            li{
+              background: $colorPrinc01;
+              
+              a{
+                color: $colorNeut03;
+
+                &:hover{
+                  opacity: 0.7;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      li.li-search{
+        position: relative;
+        margin-top: 32px;
+        top: -14px;
+        background: $colorNeut02;
+        margin-left: 14px;
+
+        input{
+           padding: 12px;
+           transition: all 600ms ease;
+        }
+        img{
+          position: relative;
+          right: 15px;
+        }
+      }
+      .searchHover{
+        background: $colorNeut04;
+      }
+    }
+    @media(max-width: 1040px){
+      li a{
+        padding: 28px 10px;
+      }
+    }
+  }
 }
