--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -188,6 +188,7 @@ select:-webkit-autofill:focus {
 
     li.sub-menu{
       position: relative;
+      z-index: 10000;
       ul{
         display: none;
         margin-top: 12px;
@@ -359,6 +360,89 @@ select:-webkit-autofill:focus {
       li a{
         padding: 28px 10px;
       }
+    }
+  }
+}
+
+.banner-slide{
+  width: 100%;
+  height: 700px;
+  position: relative;
+  overflow: hidden;
+
+  .content-banner{
+    width: 2000px;
+
+    .slide{
+      position: absolute;
+      width: 100%;
+      height: 700px;
+      left: 100%;
+      top: 0px;
+    }
+    .slide.active{
+      z-index: 1000;
+      left: 0px;
+    }
+    .slide-0{
+      background: url('../img/img-1.jpg') center center no-repeat;
+    }
+    .slide-1{
+      background: url('../img/img-2.jpg') center center no-repeat;
+    }
+    .slide-2{
+      background: url('../img/img-3.jpg') center center no-repeat;
+    }
+  }
+
+  .arrow{
+    position: absolute;
+    top: 50%;
+    font-size: 20px;
+    color: red;
+    z-index: 10000;
+    cursor: pointer;
+    margin-top: -60px;
+  }
+  .ar-left{
+    padding: 50px;
+    background: #ddd;
+    left: 0;
+  }
+  .ar-right{
+    padding: 50px;
+    background: #ddd;
+    right: 0;
+  }
+
+  .content-balls{
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    margin-left: -75px;
+    z-index: 1000;
+    text-align: center;
+    
+
+    .ball-slide{
+      width: 30px;
+      height: 30px;
+      background: blue;
+      margin-left: 30px;
+      cursor: pointer;
+      transition: all 15  0ms ease;
+
+      &:first-child{
+        margin-left: 0px;
+      }
+
+      &:hover{
+        background: red;
+      }
+    }
+
+    .ball-slide.active{
+      background: yellow;
     }
   }
 }
