--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -111,13 +111,22 @@ $colorNeut04: #808080;
 body{
   font-family: 'titilliumregular';
   font-size: 16px;
-  @media(min-width: 992px){
-    margin: 50px 50px 0px 50px;
-  }
+  // @media(min-width: 992px){
+  //   margin: 50px 50px 0px 50px;
+  // }
 }
 
 a{
   transition: all 300ms ease;
+}
+
+.icon{
+  display: inline-block;
+  background: url();
+}
+
+.w-100{
+  width: 100%;
 }
 
 input:-webkit-autofill,
@@ -168,7 +177,6 @@ select:-webkit-autofill:focus {
     width: 100%;
 
     li{
-      margin: 14px;
       opacity: 0; // opacity 0
       position: relative;
       left: -30px;
@@ -182,7 +190,10 @@ select:-webkit-autofill:focus {
       }
 
       a{
+        padding: 16px;
         font-size: 18px;
+        display: inline-block;
+        width: 100%;
       }
     }
 
@@ -234,10 +245,10 @@ select:-webkit-autofill:focus {
       }
       input:-webkit-autofill,
       input:-webkit-autofill:hover, 
-      input:-webkit-autofill:focus{
-        border: 0px solid transparent;
-        -webkit-text-fill-color: #fff;
-        -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+      input:-webkit-autofill:focus, 
+      input:-webkit-autofill:active  {
+        -webkit-transition-delay: 9999s;
+        -webkit-transition: color 9999s ease-out, background-color 9999s ease-out;
       }
       img{
         width: 16px;
@@ -252,7 +263,25 @@ select:-webkit-autofill:focus {
         ul{
           position: absolute;
           left: 0px;
-          top: 64px;
+          top: 32px;
+          display: block;
+          opacity: 0;
+          width: 160px;
+          transition: all 400ms ease;
+          left: 50%;
+          margin-left: -80px;
+
+          li{
+            background: $colorPrinc01;
+            
+            a{
+              color: $colorNeut03;
+
+              &:hover{
+                opacity: 0.7;
+              }
+            }
+          }
         }
       }
 
@@ -297,41 +326,13 @@ select:-webkit-autofill:focus {
 
         a{
           display: inline-block;
-           padding: 28px 14px;
+           padding: 28px 20px;
         }
 
         &:hover{
           ul{
-            display: block !important;
             opacity: 1;;
-            width: 220px;
-            // margin-left: -30px;
-            animation: showLi 0.3s ease-out;
-            transition: all 300ms ease;
-
-            @keyframes showLi {
-              from {
-                top: 50px;
-                opacity: 0;
-              }
-              to {
-                top: 64px;
-                opacity: 1;
-              }
-            }
-            
-
-            li{
-              background: $colorPrinc01;
-              
-              a{
-                color: $colorNeut03;
-
-                &:hover{
-                  opacity: 0.7;
-                }
-              }
-            }
+            top: 64px;
           }
         }
       }
@@ -345,7 +346,7 @@ select:-webkit-autofill:focus {
 
         input{
            padding: 12px;
-           transition: all 600ms ease;
+           transition: all 400ms ease;
         }
         img{
           position: relative;
@@ -356,7 +357,7 @@ select:-webkit-autofill:focus {
         background: $colorNeut04;
       }
     }
-    @media(max-width: 1040px){
+    @media (min-width: 992px) and (max-width: 1040px ){
       li a{
         padding: 28px 10px;
       }
@@ -366,9 +367,13 @@ select:-webkit-autofill:focus {
 
 .banner-slide{
   width: 100%;
-  height: 700px;
+  height: 100vh;
   position: relative;
   overflow: hidden;
+
+  @media(min-width: 768px){
+    height: 700px;
+  }
 
   .content-banner{
     width: 2000px;
@@ -384,6 +389,7 @@ select:-webkit-autofill:focus {
       z-index: 1000;
       left: 0px;
     }
+
     .slide-0{
       background: url('../img/img-1.jpg') center center no-repeat;
     }
@@ -393,51 +399,120 @@ select:-webkit-autofill:focus {
     .slide-2{
       background: url('../img/img-3.jpg') center center no-repeat;
     }
+    .slide-3{
+      background: url('../img/img-3.jpg') center center no-repeat;
+    }
+  }
+
+  .text-slide{
+    position: absolute;
+    top: 20%;
+    margin-top: -100px;
+    background: rgba(0,0,0,0.4);
+    color: #fff;
+    width: 100%;
+    height: 200px;
+
+    @media(min-width: 768px){
+      top: 50%;
+      background: rgba(0,0,0,0.2);
+    }
+    @media(min-height: 540px) and (max-width: 767px){
+      top: 30%;   
+    }
+
+    a{
+      transition: all 0ms ease;
+      color: #fff;
+
+      &:hover{
+        color: $colorPrinc01;
+      }
+    }
+
+    h1{
+      font-size: 24px;
+      line-height: 60px;
+      text-align: center;
+      margin: 70px 0px;
+
+      @media(min-width: 768px){
+        font-size: 48px;
+      }
+      @media(min-width: 992px){
+        font-size: 75px;
+      }
+    }
   }
 
   .arrow{
     position: absolute;
-    top: 50%;
+    top: 70%;
     font-size: 20px;
     color: red;
     z-index: 10000;
     cursor: pointer;
-    margin-top: -60px;
+    margin-top: -62px;
+    transition: all 0ms ease;
+    opacity: 0.75;
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 100px;
+
+    @media(min-width: 768px){
+      top: 50%;
+      background: none;
+    }
+
+    &:hover{
+      opacity: 1;
+    }
   }
   .ar-left{
     padding: 50px;
-    background: #ddd;
-    left: 0;
+    left: 24px;
+    @media(min-width: 768px){
+      left: 0;
+    }
+
+    img{
+      width: 24px;
+    }
   }
   .ar-right{
     padding: 50px;
-    background: #ddd;
-    right: 0;
+    right: 24px;
+    @media(min-width: 768px){
+      right: 0;
+    }
+    img{
+      width: 24px;
+    }
   }
 
   .content-balls{
     position: absolute;
     bottom: 50px;
     left: 50%;
-    margin-left: -75px;
+    margin-left: -45px;
     z-index: 1000;
     text-align: center;
+    @media(min-width: 1170px){
+      margin-left: -570px;
+    }
     
-
     .ball-slide{
       width: 30px;
       height: 30px;
-      background: blue;
-      margin-left: 30px;
+      background: $colorNeut03;
       cursor: pointer;
-      transition: all 15  0ms ease;
+      transition: all 300ms ease;
 
       &:first-child{
         margin-left: 0px;
       }
 
       &:hover{
-        background: red;
+        background: $colorPrinc02;
       }
     }
 
@@ -445,4 +520,222 @@ select:-webkit-autofill:focus {
       background: yellow;
     }
   }
+}
+
+.banner-slide-second{
+  margin-bottom: 100px;
+
+  header{
+    text-align: center;
+    width: 100%;
+    margin: 128px 0px 64px;
+    position: relative;
+  }
+  .ar{
+    cursor: pointer;
+    transition: all 200ms ease;
+
+    &:hover{
+      opacity: 0.7;
+    }
+    &:active{
+      opacity: 0;
+    }
+  }
+  .ar-left{
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+  .ar-right{
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .ar-off{
+    opacity: 0.3;
+
+    &:hover{
+      opacity: 0.3 !important;
+    }
+    &:active{
+      opacity: 0.3 !important;
+    }
+  }
+
+  .content-banner{
+    width: 263px;
+    height: 526px;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+    @media(min-width: 768px){
+      width: 546px;
+    }
+    @media(min-width: 992px){
+      width: 830px;
+    }
+    @media(min-width: 1200px){
+      width: 1113px;
+    }
+  }
+
+  .item-active{
+    z-index: 100;
+  }
+
+  .item{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 263px;
+    height: 526px;
+    transition: all 300ms ease;
+
+    .wrap{
+      position: relative;
+      transition: all 300ms ease;
+      left: 0;
+
+      &:hover{
+        .box-inf{
+          color: $colorNeut03;
+          background: $colorPrinc01;
+        }
+      }
+  
+      .box-inf{
+        position: absolute;
+        bottom: 0px;
+        width: 100%;
+        padding: 25px 40px;
+        background: rgba(0,0,0,0.7);
+        color: #fff;
+        transition: all 300ms ease;
+      }
+  
+      h5{
+        margin-bottom: 16px;
+      }
+      h3{
+        margin-bottom: 85px;
+        font-size: 26px;
+        line-height: 36px;
+      }
+      li{
+        margin-bottom: 8px;
+  
+        &:last-child{
+          margin-bottom: 0px;
+        }
+      }
+    }
+  }
+
+}
+
+.about-us-sec{
+  margin-bottom: 55px;
+  height: 620px;
+
+  .img-back{
+    @media(min-width: 1170px){
+      background: url('../img/forabout.png') no-repeat -510px -22px;
+      height: 620px;
+    }
+  }
+
+  .colapse-simple{
+    h2{
+      margin-bottom: 55px;
+    }
+  }
+}
+
+.colapse-simple{
+  width: 100%;
+  margin-bottom: 54px;
+
+  .col-menu{
+    margin-bottom: 24px;
+
+    li{
+      padding-right: 35px;
+      border-bottom: solid 10px #e8e8e8;
+      margin-right: 2px;
+      padding-bottom: 10px;
+      font-size: 20px;
+      color: $colorPrinc02;
+      font-family: 'titillium_bdbold';
+      cursor: pointer;
+      transition: all 200ms ease;
+
+      &:hover{
+        opacity: 0.7;
+      }
+    }
+
+    li.active{
+      border-bottom: solid 10px $colorPrinc02;
+    }
+  }
+
+  .col-content{
+    position: relative;
+
+    .item{
+      position: absolute;
+      left: 0;
+      top: 0;
+      opacity: 0;
+      transition: all 300ms ease;
+
+      p{
+        line-height: 26px;
+        margin-bottom: 32px;
+      }
+
+      a{
+        color: $colorPrinc02;
+        font-family: 'titillium_bdbold';
+        transition: all 200ms ease;
+
+        &:hover{
+          color: #000;
+        }
+      }
+    }
+
+    .item.active{
+      opacity: 1;
+      z-index: 100;
+    }
+
+    .item-1{
+      p{
+        width: 100%;
+
+        img{
+          float: right;
+          margin-left: 16px;
+        }
+      }
+      // .wrap-img{
+      //   width: 264px;
+      //   height: 264px;
+      //   margin-left: 24px;
+      // }
+    }
+    .item-3{
+      p{
+        margin-bottom: 0px;
+      }
+    }
+  }
+}
+
+.blockqoute-1{
+  padding: 50px;
+  font-size: 16px;
+  line-height: 30px;
 }
